# tomlreduce

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  filestream.c  filestream.h  fmtlogic.c  fmtlogic.h  main.c  tomlprint.c  tomlprint.h
docs/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  build_2_c_make_files_23_830_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  build_2_c_make_files_23_830_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.js  classes.html  cmake-build-debug_2_c_make_files_23_827_88_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  dir_16280b94ec18e6f0e1f1d824982fb61b.html  dir_16280b94ec18e6f0e1f1d824982fb61b_dep.map  dir_16280b94ec18e6f0e1f1d824982fb61b_dep.md5  dir_36a319fdfa90daea3fe65386bde15ea1.html  dir_36a319fdfa90daea3fe65386bde15ea1_dep.map  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_63772b626f2709090f0bdca0f40827b4_dep.map  dir_63772b626f2709090f0bdca0f40827b4_dep.md5  dir_68c3b7fd5cb1c5bf98d2ffc7764fec3f.html  dir_68c3b7fd5cb1c5bf98d2ffc7764fec3f.js  dir_68c3b7fd5cb1c5bf98d2ffc7764fec3f_dep.map  dir_68c3b7fd5cb1c5bf98d2ffc7764fec3f_dep.md5  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_a30f206eb85b936aebf778f8ca08be7c.html  dir_a30f206eb85b936aebf778f8ca08be7c.js  dir_a30f206eb85b936aebf778f8ca08be7c_dep.map  dir_a30f206eb85b936aebf778f8ca08be7c_dep.md5  dir_f89abcb304c928c7d889aa5625570de5.html  doxygen_crawl.html  examples.html  examples.js  files.html  files_dup.js  filestream_8c.html  filestream_8c.js  filestream_8c__incl.map  filestream_8c__incl.md5  (+222 more)
(+30 files in other folders)
